<resources>
    <string name="app_name">Project</string>
    <string name="Email">Email:</string>
    <string name="forgotPasswordButton">Button</string>
    <string name="forogt_password">Forogt Password?</string>
    <string name="signup">SignUp?</string>
    <string name="loginButton">LOGIN</string>
    <string name="emailBox">Enter Email Address</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="email2">Email:</string>
    <string name="enter_email_address2">Enter Email Address</string>
    <string name="passwordTextview2">Password:</string>
    <string name="nameTextView">TextView</string>
    <string name="full_name">Full Name</string>
    <string name="full_name2">Full Name</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="password_max_7_characters">Password: (Max 7 characters)</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_drawer">activity_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="signup1">SIGNUP</string>
    <string name="yo">Yo!!!!!</string>
</resources>